@@ -10,6 +10,7 @@
 	* test/in/tiff: Removed this directory.
 	* il_rot.c: Added this file.  Added .rot loading.
 	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_rot.c to source line.
+	* il.h: Added IL_ROT define.
 
 2009-02-15 Matěj Týč <bubla@users.sf.net>
 	* src-ILU/ilur: Added the ilur - commandline ILU frontend
